--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -172,6 +172,20 @@
                                 <!--<p>Words can tell nothing, what we can promise is that everything is far beyong your imagination.</p>-->
                             <!--</div>-->
                             <div class="m-pane-body">
+                                <div class="m-scene-card card-more-info" data-title="wt">
+                                    <div class="card-cover">
+                                        <img src="../../img/images/viewpoints/wt1.jpg">
+                                        <label class="card-city shanghai">Shanghai</label>
+                                    </div>
+                                    <div class="card-info">
+                                        <p class="card-title">Bund de Shanghai</p>
+                                        <p class="card-detail">Le Bund est le symbole de la ville de shanghai</p>
+                                    </div>
+                                    <div class="card-more-info" data-title="wt">
+                                        <span>En plus</span>
+                                        <span class="icon-arrow-right">▶</span>
+                                    </div>
+                                </div>
                                 <div class="m-scene-card card-more-info"  data-title="hkzj">
                                     <div class="card-cover">
                                         <img src="../../img/images/viewpoints/1-1_380_342.png">
@@ -214,23 +228,23 @@
                                         <span class="icon-right">▶</span>
                                     </div>
                                 </div>
-                                <div class="m-scene-card card-more-info" data-title="tjfqy">
-                                    <div class="card-cover">
-                                        <img src="../../img/images/viewpoints/4-1_380_342.png">
-                                        <label class="card-city zhangjiajie">Zhangjiajie</label>
-                                    </div>
-                                    <div class="card-info">
-                                        <p class="card-title">Le Parc culturel de l'ethnie Tujia<span style="color:#FBFAE8">这是一个用于填充的span</span></p>
-                                        <p class="card-detail">Vous pouvez le trouvez que en Chine</p>
-                                    </div>
-                                    <div class="card-more-info" data-title="tjfqy">
-                                        <span>En plus</span>
-                                        <span class="icon-right">▶</span>
-                                    </div>
-                                </div>
+                                <!--<div class="m-scene-card card-more-info" data-title="tjfqy">-->
+                                    <!--<div class="card-cover">-->
+                                        <!--<img src="../../img/images/viewpoints/4-1_380_342.png">-->
+                                        <!--<label class="card-city zhangjiajie">Zhangjiajie</label>-->
+                                    <!--</div>-->
+                                    <!--<div class="card-info">-->
+                                        <!--<p class="card-title">Le Parc culturel de l'ethnie Tujia<span style="color:#FBFAE8">这是一个用于填充的span</span></p>-->
+                                        <!--<p class="card-detail">Vous pouvez le trouvez que en Chine</p>-->
+                                    <!--</div>-->
+                                    <!--<div class="card-more-info" data-title="tjfqy">-->
+                                        <!--<span>En plus</span>-->
+                                        <!--<span class="icon-right">▶</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                                 <div class="m-scene-card card-more-info" data-title="tzfjq">
                                     <div class="card-cover">
-                                        <img src="../../img/images/viewpoints/tzs1.jpg">
+                                        <img src="../../img/images/viewpoints/tms1.jpg">
                                         <label class="card-city zhangjiajie">Zhangjiajie</label>
                                     </div>
                                     <div class="card-info">
@@ -308,6 +322,34 @@
                                         <p class="card-detail">Construite dans les arêtes abruptes</p>
                                     </div>
                                     <div class="card-more-info" data-title="wall">
+                                        <span>En plus</span>
+                                        <span class="icon-arrow-right">▶</span>
+                                    </div>
+                                </div>
+                                <div class="m-scene-card card-more-info" data-title="jbx">
+                                    <div class="card-cover">
+                                        <img src="../../img/images/viewpoints/jbx1.jpg">
+                                        <label class="card-city zhangjiajie">zhangjiajie</label>
+                                    </div>
+                                    <div class="card-info">
+                                        <p class="card-title">Le ruisseau Jinbian<span style="color:#FBFAE8">这是一个用于填充的span</span></p>
+                                        <p class="card-detail">L’eau cristalline, les allées ombragée</p>
+                                    </div>
+                                    <div class="card-more-info" data-title="jbx">
+                                        <span>En plus</span>
+                                        <span class="icon-arrow-right">▶</span>
+                                    </div>
+                                </div>
+                                <div class="m-scene-card card-more-info" data-title="mlxx">
+                                    <div class="card-cover">
+                                        <img src="../../img/images/viewpoints/mlxx1.jpg">
+                                        <label class="card-city zhangjiajie">zhangjiajie</label>
+                                    </div>
+                                    <div class="card-info">
+                                        <p class="card-title">Charme Xiangxi<span style="color:#FBFAE8">这是一个用于填充的span</span></p>
+                                        <p class="card-detail">Grande mise en scène et beau spectacle</p>
+                                    </div>
+                                    <div class="card-more-info" data-title="mlxx">
                                         <span>En plus</span>
                                         <span class="icon-arrow-right">▶</span>
                                     </div>
@@ -401,7 +443,7 @@
                                     <!--</div>-->
                                 <!--</div>-->
                             <!--</div>-->
-                            <div><img style="width: 100%;height: 100%;padding-top: 2rem;padding-bottom: 2rem" src="http://res.cloudinary.com/freevel/image/upload/v1505553075/prix_kul717.jpg"></div>
+                            <div><img style="width: 100%;height: 100%;padding-top: 2rem;padding-bottom: 2rem" src="http://res.cloudinary.com/freevel/image/upload/v1507465661/prix2_w0oifd.jpg"></div>
                             <div id="priceDetails">
                                 <h1 style="font-family: 'Bernard MT Condensed'">Le prix est compris</h1>
                                 <ul id="detailTrue">
