--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -32,7 +32,7 @@
                 <p class="home-brief-text">
                     La Chine s'affiche comme une destination hors du commun, avec un patrimoine culturel et naturel incomparablement riche et varié. Nous explorons cette Chine hétéroclite au centre de la Chine, et découvrons les multiples facettes de ces destinations traditionnelles . De Wuhan à Zhangjiajie, en passant par Fenghuang, ce voyage est une découverte complète de tous les mystères de la Chine.
                 </p>
-                <img src="../../img/images/others/prix_title.jpg">
+                <img src="../../img/images/others/prix_title.png">
             </div>
         </section>
 
@@ -40,7 +40,7 @@
             <div class="home-section-body">
                 <div class="home-brief-body">
                     <div class="home-brief-item1">
-                        <img src="../../img/images/bg/indexBanner2.jpg" style="width: 100%">
+                        <img src="../../img/images/bg/indexBanner2.png" style="width: 100%">
                     </div>
                 </div>
             </div>
