--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -161,7 +161,7 @@
                                 <!--</span>-->
                                 <!--</div>-->
                             <!--</div>-->
-                            <div><img style="width: 100%;height: 100%" src="http://res.cloudinary.com/freevel/image/upload/v1505554531/plan_tsvqlg.jpg"></div>
+                            <div><img style="width: 100%;height: 100%" src="http://res.cloudinary.com/freevel/image/upload/v1507551508/plan_mipwaf.jpg"></div>
                         </div>
                     </div>
                     <div role="tabpanel" class="m-pane fade in" id="viewpoint">
@@ -248,8 +248,8 @@
                                         <label class="card-city zhangjiajie">Zhangjiajie</label>
                                     </div>
                                     <div class="card-info">
-                                        <p class="card-title">Tianzishan<span style="color:#FBFAE8">这是一个用于填充的span这是一个用于填充的span</span></p>
-                                        <p class="card-detail">Vues inoubliables</p>
+                                        <p class="card-title">Mont Tianmen<span style="color:#FBFAE8">这是一个用于填充的span这是一个用于填充的span</span></p>
+                                        <p class="card-detail">Montagne de la Porte du ciel</p>
                                     </div>
                                     <div class="card-more-info" data-title="tzfjq">
                                         <span>En plus</span>
@@ -493,7 +493,7 @@
                                                     <span>★★★★★</span>
                                                 </div>
                                                 <div class="card-label row-2">
-                                                    <span>Vue sur le Yantsé</span>
+                                                    <span>Près du Yantsé</span>
                                                 </div>
                                                 <div class="card-footer card-open-more">
                                                     <span>En plus</span>
@@ -527,18 +527,18 @@
                                     <div class="m-hotel-body">
                                         <div class="m-hotel-card">
                                             <div class="card-cover">
-                                                <img src="../../img/images/hotels/5.2.1.png" alt="">
+                                                <img src="../../img/images/hotels/hotel6-1.jpg" alt="">
                                             </div>
                                             <div class="card-info">
                                                 <p class="card-title">
-                                                    <span>Royal Suites &Towers</span>，<span>Wuhan</span>
+                                                    <span>Jinjiang Metropolo Hote</span>，<span>Shanghai</span>
                                                 </p>
                                                 <div class="card-label row-1">
                                                     <span>Centre ville</span>
-                                                    <span>★★★★★</span>
+                                                    <span>★★★★</span>
                                                 </div>
                                                 <div class="card-label row-2">
-                                                    <span>Vue sur le Yantsé</span>
+                                                    <span>Près du Yantsé</span>
                                                 </div>
                                                 <div class="card-footer card-open-more">
                                                     <span>En plus</span>
@@ -563,11 +563,10 @@
                                                 </div>
                                             </div>
                                             <div class="hotel-detail-rside">
-                                                <p class="hotel-brief">Royal Suits & Towers est un hôtel de luxe 5 étoiles pourvu d'une piscine intérieure, d'une salle de sport, ainsi que d'une connexion Wi-Fi gratuite dans la chambre.
-                                                    Ce quartier (Jiang An) est un choix idéal pour les voyageurs qui s'intéressent à ces thèmes : le shopping, les lacs et les paysages.
+                                                <p class="hotel-brief">Le Jinjiang Metropolo Classiq Hotel, Shanghai,Off Bund propose un restaurant, une salle de sport et une connexion Wi-Fi gratuite, à côté du Bund et de la rue piétonne de Nanjing.
                                                 </p>
-                                                <p class="hotel-brief">Le Q-café propose de copieux petits-déjeuners, ainsi qu'une cuisine internationale.</p>
-                                                <p class="hotel-brief">L’hôtel a une cave privée pour goûter aux plus fameuses productions.</p>
+                                                <p class="hotel-brief">Le Jinjiang Metropolo Classiq Hotel, Shanghai,Off Bund est à 50 mètres du Bund ainsi qu'à 20 minutes à pied du jardin de Yuyan et de la place du Peuple. Les chambres climatisées disposent d'une télévision par satellite et d'un minibar. Leur salle de bains privative est pourvue d'un sèche-cheveux et de chaussons.</p>
+                                                <p class="hotel-brief">Ce quartier (Huangpu) est un choix idéal pour les voyageurs qui s'intéressent à ces thèmes : le shopping, l'architecture et les visites.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -813,7 +812,7 @@
         </div>
     </div>
 </div>
-<script src="../../js/javascripts/jquery-3.0.0.min.js"></script>
+<script src="../../javascripts/jquery-3.0.0.min.js"></script>
 <script src="../../js/javascripts/main.js"></script>
 <script src="../../js/config.js"></script>
 <script>
