--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -812,9 +812,9 @@
         </div>
     </div>
 </div>
-<script src="../../javascripts/jquery-3.0.0.min.js"></script>
+<script src="../../js/javascripts/jquery-3.0.0.min.js"></script>
 <script src="../../js/javascripts/main.js"></script>
-<script src="../../js/config.js"></script>
+<script src="../../js/config.js"></script>s
 <script>
     function recordPv(){
         $.ajax({
