--- a/com.cyt.music.webapp/src/main/webapp/screens/manage/order.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/manage/order.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Guita</title>
+	<title>order</title>
 	<!-- Custom Fonts -->
 	<link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
@@ -27,19 +27,12 @@
 	<link rel="stylesheet" href="../../boot_plugins/Nivo-Slider-master/nivo-slider.css"  type="text/css" media="screen" />
 	<link rel="stylesheet" href="../../boot_plugins/Nivo-Slider-master/demo/style.css" type="text/css" media="screen" />
 	<style>
-		.weather{ float: left; list-style: none; margin-left:8px;}
 		.btn { font-family:"微软雅黑";}
-		.section-heading { font-family:"微软雅黑"; font-style:italic;}
-		.lead { font-family:"微软雅黑";}
 		.table th, .table td {
 			text-align: center;
 			vertical-align: middle!important;
 		}
-		.btn-sm { border-radius:6px;}
 		#actionG { top: 10px;}
-		#bgMusic { display: none;float: left;}
-		#musicBtn { display: none;float: left; height: 32px; width: 50px;font-family:"微软雅黑";}
-		#audioPart{ padding-bottom: 35px;}
 	</style>
 </head>
 <body>
@@ -87,26 +80,6 @@
 			<tbody>
 			</tbody>
 		</table>
-
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-			<input type="hidden" name="cmd" value="_s-xclick">
-			<input type="hidden" name="hosted_button_id" value="9X4VPAFMSHAKQ">
-			<input type="image" src="https://www.paypalobjects.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
-			<img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1"/>
-		</form>
-
-
-		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
-			<input type="hidden" name="cmd" value="_s-xclick">
-			<input type="hidden" name="hosted_button_id" value="XN65M4S3NS5FL">
-			<input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
-			<img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
-		</form>
-
-		<br>用户姓名<input type="text" name="name" id="name" value=""/></br>
-		<br>用户状态<input type="text" name="phone" id="phone" value="" /></br>
-		<br><input type="button" name="btn" id="btn" value="保存" onclick="demoQuery()"/></br>
-
 		<!-- common -->
 		<script src="../../js/common.js"></script>
 		<!-- config -->
