--- a/com.cyt.music.webapp/src/main/webapp/screens/manage/pv.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/manage/pv.html
@@ -72,6 +72,9 @@
 				<th data-field="date">
 					日期
 				</th>
+				<th data-field="remark">
+					时间
+				</th>
 				<!-- 在此省略表格列的代码，代码和上面差不多 -->
 				<!--<th class="col-xs-2" data-field="action" data-formatter="operateFormatter" data-events="actionEvents">Action</th>-->
 			</tr>
